[gd_scene load_steps=4 format=2]

[ext_resource path="res://res/Sprites/Actors/BaseEnemy/DefaultEnemy.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=3]
[ext_resource path="res://res/ResFiles/HumanoidCollision.tres" type="Shape" id=4]

[node name="Enemy" type="KinematicBody"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 3 )
charSprite = ExtResource( 1 )
charCollision = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = ExtResource( 4 )

[node name="CharacterSprite" type="Sprite3D" parent="CollisionShape"]
pixel_size = 0.03
axis = 1
transparent = false
shaded = true
alpha_cut = 1
texture = ExtResource( 1 )

[node name="MuzzleLight" type="SpotLight" parent="CollisionShape/CharacterSprite"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.215656, -4.54719e-09, -0.104028 )
visible = false
light_color = Color( 1, 0.8, 0.27451, 1 )
light_energy = 4.0
light_indirect_energy = 4.0
light_size = 1.0
light_bake_mode = 2
shadow_enabled = true
spot_range = 3.0
spot_angle = 30.0

[node name="RayCast" type="RayCast" parent="CollisionShape/CharacterSprite"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.234819, -4.91328e-09, -0.112403 )
cast_to = Vector3( 0, 0, -30 )
collision_mask = 3

[node name="FoV" type="Area" parent="CollisionShape/CharacterSprite"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -0.438114, -0.234656 )
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon" type="CollisionPolygon" parent="CollisionShape/CharacterSprite/FoV"]
polygon = PoolVector2Array( 0, 0, 8, 7, 8, -7 )

[connection signal="body_entered" from="CollisionShape/CharacterSprite/FoV" to="." method="_on_FoV_body_entered"]
[connection signal="body_exited" from="CollisionShape/CharacterSprite/FoV" to="." method="_on_FoV_body_exited"]
